fixed aligning

--- a/src/Components/Intro/intro.scss
+++ b/src/Components/Intro/intro.scss
@@ -23,7 +23,7 @@
    @include mobile{
     position: relative;
     width: 60%;
-    margin-top: 20%;
+    margin-top: 10%;
   }
 
 
@@ -81,7 +81,7 @@
        // align-items: center;
         margin-left: 0;
         width: 100%;
-        height: 100%;
+        height: 90%;
       }
 
       h1 {
